14.jun (la)
      - add sol notehead
      - enhance plugin framework : chord.small, chord.noStem, rest.small, note.velocity, score.keysig
12.jun (la)
      - measure number no more selectable to avoid crash on undo
      - barline at start of system not selectable to avoid crash on undo
      - can't create empty part
      - some memory leak to avoid crash on undo...
11.jun (la)
      - Restore ability to delete instrument name in place
      - Right click on instrument name for staff properties
      - fix #11019: new files: jazz templates, demo & chord styles by Marc Sabatella
      - new chordstyle is apply now immediatly
      - fix #5142: Notes do not release together in Swing or Shuffle mode
10.jun (la)
      - update musescore.com plugin
      - remove "what's this" in toolbar and help menu
06.jun (la)
      - fix #10564: Selecting voice before enabling Note Entry and entering notes causes crash
      - fix #9107: Pasting multiple multi-voice notes causes crash
      - remove delete button in symboldialog, fix system flag
      - fix crash on WAV export in fluid
04.jun (la)
      - fix #10935: fix Soundfont path //
03.jun (la)
      - fix #10934: double error message on opening a 2.0 score
02.jun (la)
      - fix #10915: Rename WRC to WRC.BAT in CMakeList.txt
01.jun (la)
      - add shortcut for navigating between score tab
      - more page format option accessible via plugins
29.may (lv)
      - fix #10849: musicxml exports lyrics only with notes in voice 1
        note: file attached to http://musescore.org/en/node/10168 not handled yet
24.may (la)
      - fix #4526: Adding ties to chords
      - fix #9805: Second Voice can end up broken (patch by fnbecker)
      - Never create empty score on startup
20.may (la)
      - accommodate two digit version X.X
      - fix #9307: Nested tuplets causes crash
19.may (la)
      - fix crash reported in #10674 comment 2
17.may (la)
      - fix #1722: Continue last session tries to open discarded score